# PARSER_HH_TO_DATABASE_KURSWORK-5

./: README.md  classes.py  main.py  pyproject.toml  queries.sql  scripts_for_sql.sql
